Removed assertions